eksnode/src/kubelet/snapshots/eksnode__kubelet__kubeconfig__tests__it_creates_kubeconfig-2.snap
---
source: eksnode/src/kubelet/kubeconfig.rs
expression: buf
---
"kind: Config\napiVersion: v1\nclusters:\n- cluster:\n    server: http://localhost:8080\n    certificate_authority: /etc/kubernetes/pki/ca.crt\n  name: kubernetes\ncontexts:\n- name: kubelet\n  context:\n    cluster: kubernetes\n    user: kubelet\ncurrent-context: kubelet\nusers:\n- name: kubelet\n  user:\n    exec:\n      apiVersion: client.authentication.k8s.io/v1beta1\n      command: /usr/bin/aws-iam-authenticator\n      args:\n      - token\n      - -i\n      - example\n      - --region\n      - us-west-2\n"
