eksnode/src/kubelet/snapshots/eksnode__kubelet__kubeconfig__tests__it_creates_kubeconfig.snap
---
source: eksnode/src/kubelet/kubeconfig.rs
expression: new
---
KubeConfig {
    kind: "Config",
    api_version: "v1",
    clusters: [
        NamedCluster {
            cluster: Cluster {
                server: "http://localhost:8080",
                tls_server_name: None,
                insecure_skip_tls_verify: None,
                certificate_authority: Some(
                    "/etc/kubernetes/pki/ca.crt",
                ),
                certificate_authority_data: None,
                proxy_url: None,
                disable_compression: None,
                extensions: None,
            },
            name: "kubernetes",
        },
    ],
    contexts: [
        NamedContext {
            name: "kubelet",
            context: Context {
                cluster: "kubernetes",
                user: "kubelet",
                namespace: None,
                extensions: None,
            },
        },
    ],
    current_context: "kubelet",
    users: [
        NamedAuthInfo {
            name: "kubelet",
            user: AuthInfo {
                client_certificate: None,
                client_certificate_data: None,
                client_key: None,
                client_key_data: None,
                token: None,
                token_file: None,
                _as: None,
                as_uid: None,
                as_groups: None,
                as_user_extra: None,
                username: None,
                password: None,
                auth_provider: None,
                exec: Some(
                    ExecConfig {
                        api_version: Some(
                            "client.authentication.k8s.io/v1beta1",
                        ),
                        command: "/usr/bin/aws-iam-authenticator",
                        args: Some(
                            [
                                "token",
                                "-i",
                                "example",
                                "--region",
                                "us-west-2",
                            ],
                        ),
                        env: None,
                        install_hint: None,
                        provide_cluster_info: None,
                        interactive_mode: None,
                    },
                ),
                extensions: None,
            },
        },
    ],
}
