eksnode/src/kubelet/snapshots/eksnode__kubelet__kubeconfig__tests__it_serializes_kubeconfig-2.snap
---
source: eksnode/src/kubelet/kubeconfig.rs
expression: serialized
---
"kind: Config\napiVersion: v1\nclusters:\n- cluster:\n    server: MASTER_ENDPOINT\n    certificate-authority: /etc/kubernetes/pki/ca.crt\n  name: kubernetes\ncontexts:\n- name: kubelet\n  context:\n    cluster: kubernetes\n    user: kubelet\ncurrent-context: kubelet\nusers:\n- name: kubelet\n  user:\n    exec:\n      apiVersion: client.authentication.k8s.io/v1beta1\n      command: /usr/bin/aws-iam-authenticator\n      args:\n      - token\n      - -i\n      - CLUSTER_NAME\n      - --region\n      - AWS_REGION\n"
